# liquid-cad

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  shell.nix
.github/workflows/: deployment.yml  pages.yml  rust.yml
detailer/: Cargo.toml
detailer/src/: lib.rs
drawing/: Cargo.toml
drawing/src/: constraints.rs  data.rs  feature.rs  handler.rs  lib.rs  tools.rs
drawing/src/data/: constraint_data.rs  group.rs  mod.rs  terms.rs  viewport.rs
drawing/src/l/: draw.rs  gear.rs  mod.rs  three_d.rs
drawing/src/system/: mod.rs  terms.rs
eq/: Cargo.toml
eq/src/: dumbass_solve.rs  lib.rs  parser.rs  search_solve.rs  solve.rs  sub_solve.rs
examples/: 2040_right_angle.lcad  2040_right_angle_with_extra.lcad  2040_t_mount.lcad  2040_to_2020_right_angle.lcad  2080_right_angle.lcad  2080_t_mount.lcad  L_cam_WIP.lcad  angle.lcad  cam.lcad  extrude_test.lcad  gear.lcad  l_bracket.lcad  lath_motor_gear.lcad  lathe spindle plate.lcad  lathe_bearing_mount.lcad  lathe_bottom_plate.lcad  lathe_cross_slide_mount.lcad  lathe_headstock_side.lcad  lathe_live_center_88mm.lcad  lathe_motor_mount.lcad  lathe_motor_mount_2.lcad  lathe_slide_mount.lcad  lathe_tailstock_mount.lcad  lathe_tailstock_mount_2.lcad  mill_alignment_plate_5mm_drill.lcad  mill_head_mount_plate.lcad  spindle_mount.lcad  spindle_mount_2.lcad  spindle_mount_bored_spacer_2.lcad  wedge.lcad  wip_broken.lcad
helper/: Cargo.toml
helper/src/: lib.rs
liquid-cad/: Cargo.toml  README.md  index.html  rust-toolchain  shell.nix
liquid-cad/.cargo/: config.toml
liquid-cad/src/: app.rs  lib.rs  main.rs
liquid-cad/wix/: License.rtf  main.wxs
