[workspace]
members = ["liquid-cad", "drawing", "detailer", "eq", "helper"]
resolver = "2"

[profile.release-with-debug]
inherits = "release"
debug = true

[workspace.dependencies]
# our crates
drawing = {version = "0.1.0", path = "./drawing"}
detailer = {version = "0.1.0", path = "./detailer"}
eq = {version = "0.1.0", path = "./eq"}
helper = {version = "0.1.0", path = "./helper"}

# external deps
egui = "0.24.1"
eframe = { version = "0.24.1", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
egui_extras = {version = "0.24.1", features = ["all_loaders"]}
image = { version = "0.24", features = ["png"] }
log = "0.4"
egui-toast = "0.10"

rfd = {version = "0.12", default-features = false, features = ["xdg-portal"]}

slotmap = {version = "^1.0", features = ["serde"]}
serde = { version = "1", features = ["derive"] }
ron = { version = "0.8", features = ["integer128"] }

heapless = "0.7"
num = "0.4"
chumsky = "1.0.0-alpha.4"
nalgebra = "0.32"
kurbo = "0.10"

truck-modeling = "0.5.*"
truck-polymesh = "0.5.*"
truck-meshalgo = "*"