[package]
name = "detailer"
version = "0.1.0"
authors = ["Tom <tom@ciphersink.net>"]
edition = "2021"
rust-version = "1.71"


[dependencies]
egui = "0.24.0"
egui_extras = "0.24.0"
slotmap = {version = "^1.0", features = ["serde"]}
serde = { version = "1", features = ["derive"] }
drawing = {version = "0.1.0", path = "../drawing"}