[package]
name = "drawing"
version = "0.1.0"
authors = ["Tom <tom@ciphersink.net>"]
edition = "2021"
rust-version = "1.71"


[dependencies]
egui.workspace = true
slotmap.workspace = true
serde.workspace = true

eq.workspace = true
num.workspace = true
heapless.workspace = true
kurbo.workspace = true

truck-modeling.workspace = true
truck-polymesh.workspace = true
truck-meshalgo.workspace = true
truck-topology.workspace = true
truck-stepio.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tiny-skia = "0.11"