[package]
name = "liquid-cad"
version = "0.1.0"
authors = ["Tom <tom@ciphersink.net>"]
edition = "2021"
rust-version = "1.71"


[dependencies]
drawing = {version = "0.1.0", path = "../drawing"}
detailer = {version = "0.1.0", path = "../detailer"}
helper = {version = "0.1.0", path = "../helper"}

egui = "0.24.1"
eframe = { version = "0.24.1", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
egui_extras = {version = "0.24.1", features = ["all_loaders"]}
image = { version = "0.24", features = ["png"] }
log = "0.4"
egui-toast = "0.10"

rfd = {version = "0.12", default-features = false, features = ["xdg-portal"]}

serde = { version = "1", features = ["derive"] }
ron = { version = "0.8", features = ["integer128"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
