[package]
name = "liquid-cad"
version = "0.1.0"
authors = ["Tom <tom@ciphersink.net>"]
edition = "2021"
rust-version = "1.71"


[dependencies]
drawing.workspace = true
detailer.workspace = true
helper.workspace = true

egui.workspace = true
eframe.workspace = true
egui_extras.workspace = true
image.workspace = true
log.workspace = true
egui-toast.workspace = true

rfd.workspace = true

slotmap.workspace = true
serde.workspace = true
ron.workspace = true

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[package.metadata.bundle]
name = "Liquid CAD"
identifier = "com.github.twitchyliquid64.liquid-cad"
icon = ["../assets/install.png"]
version = "0.0.1"
copyright = "Copyright (c) liquid-cad 2024. All rights reserved."
category = "Developer Tool"
short_description = "A 2.5D CAD program for rapid prototyping, written in rust."
license = "MIT"
osx_minimum_system_version = "10.8"
osx_url_schemes = ["com.github.twitchyliquid64.liquid-cad"]

[package.metadata.wix]
dbg-build = false
dbg-name = false
name = "Liquid CAD"
no-build = false
output = "../target/wix/LiquidCadInstaller.msi"
version = "0.0.1"
license = "MIT"